Add support for big_logo and small_logo in config file. Allows customization of your DXR instance.

--- a/templates/dxr-header.html
+++ b/templates/dxr-header.html
@@ -21,7 +21,7 @@
 </div>
 <div id="bc" dojoType="dijit.layout.BorderContainer" design="headline" gutters="false" style="width: 100%; height: 100%">
   <div id="header" dojoType="dijit.layout.ContentPane" region="top">
-    <div id="logo"><a href="${virtroot}/index.html"><img src="${virtroot}/images/powered-by-mozilla-small.png" border="0"></a></div>
+    <div id="logo"><a href="${virtroot}/index.html"><img src="${small_logo}" border="0"></a></div>
     <div id="search">
       <form id="searchForm" method="get" action="${virtroot}/search.cgi">
         <input id="search-box" name="string" type="text" size="31" maxlength="2048" title="Search">
