--- a/templates/dxr-index-template.html
+++ b/templates/dxr-index-template.html
@@ -57,7 +57,7 @@ footer {
 </head>
 
 <body onload="document.getElementById('searchForm').string.focus()">
-<img src="images/powered-by-mozilla.png" alt="">
+<img src="${big_logo}" alt="">
 
 <form id="searchForm" method="get" action="search.cgi"><div>
   $OPTIONS
