--- a/templates/dxr-search-header.html
+++ b/templates/dxr-search-header.html
@@ -13,7 +13,7 @@
   </script>
 </head>
 <body onload="parseQS('search-box');">
-  <div id="logo"><a href="${virtroot}/index.html"><img src="${virtroot}/images/powered-by-mozilla-small.png" border="0"></a></div>
+  <div id="logo"><a href="${virtroot}/index.html"><img src="${small_logo}" border="0"></a></div>
 <div id="search">
   <form id="searchForm" method="get" action="search.cgi">
     <input id="search-box" name="string" type="text" size="31" maxlength="2048" title="Search">
